--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -14,7 +14,7 @@ server {
         proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header        X-NginX-Proxy true;
         proxy_set_header        X-Real-IP $remote_addr;
-        proxy_pass              http://api:8080/;
+        proxy_pass              http://account_api:8080/;
         proxy_ssl_session_reuse off;
         proxy_set_header        Host $http_host;
         proxy_cache_bypass      $http_upgrade;
