--- a/api/Dockerfile.prod
+++ b/api/Dockerfile.prod
@@ -21,7 +21,7 @@ RUN apk add --no-cache bash && \
     mkdir -p /vol/log && \
     chown -R account:account /vol/log
 
-RUN go build -o ./Account cmd/api/main.go
+RUN go build -o ./Account cmd/account/main.go
 
 # Image created: Dec 31, 1, 3:47:32 PM
 FROM gcr.io/distroless/base-debian12@sha256-8d946e4103571ec0e2f471eac7c4859a7f169686d222f5c8b2d9d391d6d1e50c AS deploy
