--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -2,12 +2,10 @@ FROM nginxinc/nginx-unprivileged:1.27-alpine3.19-perl
 
 LABEL maintainer="Realize Security Ltd."
 
-ARG DEPLOY_ENV
-
 USER root
 
-COPY ./certs/$DEPLOY_ENV/fullchain.pem /etc/ssl/
-COPY ./certs/$DEPLOY_ENV/privkey.pem /etc/ssl/private/
+COPY ./certs/fullchain.pem /etc/ssl/
+COPY ./certs/privkey.pem /etc/ssl/private/
 COPY ./dhparams2048.pem /etc/ssl/certs/dhparams2048.pem
 RUN rm /etc/nginx/conf.d/default.conf
 COPY ./nginx.conf /etc/nginx/conf.d/nginx.conf
@@ -18,7 +16,7 @@ RUN mkdir -p /vol/log/nginx && \
     chown nginx:nginx /vol/log/nginx && \
     chmod 755 /etc/ssl/fullchain.pem && \
     chmod 755 /etc/ssl/private/privkey.pem && \
-    chmod 755 /etc/ssl/certs/dhparam4096.pem && \
+    chmod 755 /etc/ssl/certs/dhparams2048.pem && \
     chmod 755 /etc/nginx/snippets/ssl-params.conf && \
     chmod +x /run.sh
 
