--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -2,8 +2,8 @@ version: "3.9"
 
 services:
 
-  nginx_account_api:
-    container_name: nginx_account_api
+  nginx_scribe_api:
+    container_name: nginx_scribe_api
     build:
       context: ./nginx
       args:
@@ -13,14 +13,14 @@ services:
       - "80:80"
       - "443:443"
     networks:
-      - account_api
+      - scribe_api
     depends_on:
-      - account_api
+      - scribe_api
     volumes:
-      - account_nginx_logging:/vol/log/nginx
+      - scribe_nginx_logging:/vol/log/nginx
 
-  account_api:
-    container_name: account_api
+  scribe_api:
+    container_name: scribe_api
     build:
       context: api
       dockerfile: Dockerfile.prod
@@ -34,28 +34,28 @@ services:
     env_file:
       - ./db-variables.prod.env
     depends_on:
-      - account_postgres
+      - scribe_postgres
     command: ./run
 
-  account_postgres:
-    container_name: account_postgres
+  scribe_postgres:
+    container_name: scribe_postgres
     image: postgres:15.8-alpine3.20
     restart: unless-stopped
     user: postgres
     networks:
-      - account_postgres
+      - scribe_postgres
     volumes:
-      - account_postgres_data:/var/lib/postgresql/data
+      - scribe_postgres_data:/var/lib/postgresql/data
       - ./db_scripts:/docker-entrypoint-initdb.d/
     env_file:
       - ./db-variables-dev.env
 
 volumes:
-  account_nginx_logging:
-  account_postgres_data:
+  scribe_nginx_logging:
+  scribe_postgres_data:
 
 networks:
-  account_api:
+  scribe_api:
     driver: bridge
-  account_postgres:
+  scribe_postgres:
     driver: bridge
