--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,9 +4,9 @@ server {
 
     include /etc/nginx/snippets/ssl-params.conf;
 
-    server_name         accounts-api-dev.realizesec.com accounts-api-prod.realizesec.com;
-    access_log          /vol/log/nginx/accounts-local.access.log;
-    error_log           /vol/log/nginx/accounts-local.error.log;
+    server_name         scribe-api-dev.realizesec.com scribe-api-prod.realizesec.com;
+    access_log          /vol/log/nginx/scribe-local.access.log;
+    error_log           /vol/log/nginx/scribe-local.error.log;
     ssl_certificate     /etc/ssl/fullchain.pem;
     ssl_certificate_key /etc/ssl/private/privkey.pem;
 
@@ -27,6 +27,6 @@ server {
     listen 80;
     listen [::]:80;
 
-    server_name accounts-api-dev.realizesec.com accounts-api-prod.realizesec.com;
+    server_name scribe-api-dev.realizesec.com scribe-api-prod.realizesec.com;
     return 302 https://$server_name$request_uri;
 }
