--- a/api/Dockerfile.dev
+++ b/api/Dockerfile.dev
@@ -1,4 +1,4 @@
-FROM golang:1.22.6-alpine3.20
+FROM  golang:1.23.4-alpine3.21
 
 LABEL maintainer="Realize Security Ltd."
 
@@ -16,20 +16,20 @@ RUN go mod download
 # home directory is added to get round build cache exceptions
 RUN apk add --no-cache bash && \
     apk add --no-cache ca-certificates && \
-    adduser --disabled-password account && \
+    adduser --disabled-password scribe && \
     apk update && apk add --no-cache git && \
     apk add inotify-tools && \
     mkdir -p /vol/log && \
     mkdir /go/src/exec_dir && \
-    chown -R account:account /go/src/exec_dir && \
-    chown -R account:account /vol/log
+    chown -R scribe:scribe /go/src/exec_dir && \
+    chown -R scribe:scribe /vol/log
 
 RUN go install github.com/go-delve/delve/cmd/dlv@v1.23.0
-RUN chown account:account /go/bin/dlv
+RUN chown scribe:scribe /go/bin/dlv
 
 COPY . .
 
-USER account:account
+USER scribe:scribe
 RUN PATH=$PATH:/usr/bin
 
 ENTRYPOINT sh golang_hot_reload.sh
