--- a/api/Dockerfile.prod
+++ b/api/Dockerfile.prod
@@ -1,4 +1,4 @@
-FROM golang:1.22.6-alpine3.20 AS build
+FROM golang:1.23.4-alpine3.21 AS build
 
 LABEL maintainer="Realize Security Ltd."
 
@@ -17,15 +17,15 @@ RUN apk add --no-cache bash && \
     apk add --no-cache ca-certificates && \
     apk add --no-cache libc6-compat && \
     apk add --no-cache build-base && \
-    adduser --disabled-password --no-create-home account && \
+    adduser --disabled-password --no-create-home scribe && \
     mkdir -p /vol/log && \
-    chown -R account:account /vol/log
+    chown -R scribe:scribe /vol/log
 
-RUN go build -o ./Account cmd/account/main.go
+RUN go build -o ./Scribe cmd/scribe/main.go
 
 # Image created: Dec 31, 1, 3:47:32 PM
 FROM gcr.io/distroless/base-debian12@sha256-8d946e4103571ec0e2f471eac7c4859a7f169686d222f5c8b2d9d391d6d1e50c AS deploy
 
-COPY --from=build /go/src/api/Account Account
+COPY --from=build /go/src/api/Scribe Scribe
 
-CMD ["./Account"]
+CMD ["./Scribe"]
