--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
 
   nginx_scribe_api:
@@ -33,6 +31,7 @@ services:
     restart: unless-stopped
     env_file:
       - ./db-variables.prod.env
+      - ./cache-variables.env
     depends_on:
       - scribe_postgres
     command: ./run
