use registration complete

--- a/db-variables-dev.env
+++ b/db-variables-dev.env
@@ -1,4 +1,4 @@
-POSTGRES_USER=account
+POSTGRES_USER=scribe
 POSTGRES_PASSWORD=secret_password
 POSTGRES_DB=scribe_app_db
 POSTGRES_HOST=scribe_postgres
