auth generation working

--- a/api-variables-dev.env
+++ b/api-variables-dev.env
@@ -1,5 +1,5 @@
-ADDR=0.0.0.0
-PORT=8080
+GIN_MODE=debug
 GO_ENV=development
-CACHE_HOST=scribe_cache
-CACHE_PORT=6379
+DEPLOYMENT=development
+REFRESH_SECRET=secret-token-value
+CGO_ENABLED=0
