--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,20 +1,32 @@
-server { 
+server {
     listen 443 ssl;
     listen [::]:443 ssl;
 
     include /etc/nginx/snippets/ssl-params.conf;
 
-    server_name         scribe-api-dev.realizesec.com scribe-api-prod.realizesec.com;
+    server_name         scribe-dev.realizesec.com scribe-test.realizesec.com scribe-stage.realizesec.com scribe.realizesec.com;
     access_log          /vol/log/nginx/scribe-local.access.log;
     error_log           /vol/log/nginx/scribe-local.error.log;
     ssl_certificate     /etc/ssl/fullchain.pem;
     ssl_certificate_key /etc/ssl/private/privkey.pem;
 
+    location /api/ {
+        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header        X-NginX-Proxy true;
+        proxy_set_header        X-Real-IP $remote_addr;
+        proxy_pass              http://scribe_api:8080/api/;
+        proxy_ssl_session_reuse off;
+        proxy_set_header        Host $http_host;
+        proxy_cache_bypass      $http_upgrade;
+        proxy_redirect          off;
+        client_max_body_size    10M;
+    }
+
     location / {
         proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header        X-NginX-Proxy true;
         proxy_set_header        X-Real-IP $remote_addr;
-        proxy_pass              http://scribe_api:8080/;
+        proxy_pass              http://scribe_ui:5000/;
         proxy_ssl_session_reuse off;
         proxy_set_header        Host $http_host;
         proxy_cache_bypass      $http_upgrade;
@@ -27,6 +39,6 @@ server {
     listen 80;
     listen [::]:80;
 
-    server_name scribe-api-dev.realizesec.com scribe-api-prod.realizesec.com;
+    server_name scribe-dev.realizesec.com scribe-test.realizesec.com scribe-stage.realizesec.com scribe.realizesec.com;
     return 302 https://$server_name$request_uri;
 }
